<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_style.background"
    tools:context=".AddResult">

    <TextView
        android:id="@+id/textView"
        style="@style/txtv_style.title"
        android:text="@string/add_result_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        style="@style/container"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/btnDate"
            style="@style/btn_style.clear"
            android:layout_width="wrap_content"
            android:layout_weight="5"
            android:text="@string/date_format"/>
        <Button
            android:id="@+id/btnTime"
            style="@style/btn_style.clear"
            android:layout_width="wrap_content"
            android:layout_weight="5"
            android:text="@string/time_format"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMode"
        style="@style/floating_btn_style.qatar"
        android:contentDescription="@string/fap_icon_description"
        android:src="@drawable/ic_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>