<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?attr/colorOnPrimary">

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="0dp"-->
<!--        android:id="@+id/toolbar">-->
<!--        <Button-->
<!--            style="@style/btn_style"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:text="Button"></Button>-->
<!--    </androidx.appcompat.widget.Toolbar>-->

    <RelativeLayout
        style="@style/activity_style">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/qatar_logo"
            android:contentDescription="@string/qatar_logo_description" />
        <LinearLayout
            style="@style/container.centered"
            android:orientation="vertical"
            android:layout_centerInParent="true">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddResult"
                style="@style/btn_style.qatar"
                android:text="@string/add_result_btn"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSeeResults"
                style="@style/btn_style.qatar"
                android:text="@string/see_results_btn"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>